--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <h2 id="project_tagline">An implementation of the OpenMP C/C++ language
           extensions in Clang/LLVM compiler </h2>
         <div id="downloads"> <a class="nav_link" href="#try-openmp-clang">Try
-            it!</a> <a class="nav_link" href="#contribute">Contribute</a> <a class="nav_link"
+            it!</a> <a class="nav_link" href="#contribute">Contribute</a> <a class="nav_link"
+
             href="#status">Status</a> <a class="nav_link" href="#license">License</a>
           <a class="nav_link" href="#contact">Contact</a> </div>
       </header>
@@ -40,15 +41,18 @@
           implementation hosted here.</p>
         <h1><a name="news" class="anchor" href="#news"><span class="octicon octicon-link"></span></a>News</h1>
         <p>August 23, 2013 - Initial release.</p>
-        <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
+        <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
+
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
-        <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
+        <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
+
               class="octicon octicon-link"></span></a>Getting the source code</h2>
         <pre><code>$ git clone https://github.com/clang-omp/llvm
 $ git clone https://github.com/clang-omp/compiler-rt llvm/projects/compiler-rt
 $ git clone -b clang-omp https://github.com/clang-omp/clang llvm/tools/clang</code></pre>
         <p>The source code structure follows Clang/LLVM: <a href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
-          To run (rather than just compile) code you need to get and build an <a
+          To run (rather than just compile) code you need to get and build an <a
+
             href="http://www.openmprtl.org/">Intel&reg; OpenMP* Runtime Library</a>.</p>
         <h2><a name="building" class="anchor" href="#building"><span class="octicon octicon-link"></span></a>Building</h2>
         <p>To build clang with OpenMP 3.1 support just follow the clang/LLVM
@@ -67,7 +71,8 @@ export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRA
           following options to enable OpenMP support and link to the runtime
           library.</p>
         <pre><code>-fopenmp</code></pre>
-        <h2><a name="a-simple-example" class="anchor" href="#a-simple-example"><span
+        <h2><a name="a-simple-example" class="anchor" href="#a-simple-example"><span
+
               class="octicon octicon-link"></span></a>A simple example</h2>
         <script src="https://gist.github.com/clang-omp/638a40f3a797315661d6.js"></script>
         <p>Confirm that the compiler is working correctly by saving the above
@@ -78,11 +83,10 @@ $ ./hello</code></pre>
         <p>Execute the output <code>./hello</code>. You should see more than
           one &ldquo;Hello&rdquo; line
           with different thread numbers. Note that the lines may be mixed
-          together.<br>
-          If you see only one, try setting the environment variable <span style="font-weight: bold;">OMP_NUM_THREADS</span>
+          together. If you see only one, try setting the environment variable <span style="font-weight: bold;">OMP_NUM_THREADS</span>
           to some number (say 4) and try again.</p>
         <p>If you would like to see performance impact, you can try to compile
-          and execute more complex example <a href="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204">Matrices
+          and execute a more complex example <a href="https://gist.github.com/clang-omp/89efe59c6f79ae2bc204">Matrices
             Multiplication</a>.</p>
         <h1><a name="contribute" class="anchor" href="#contribute"><span class="octicon octicon-link"></span></a>Contribute</h1>
         <p>We welcome contributions of all kinds: patches, code reviews, testing
@@ -108,7 +112,8 @@ $ ./hello</code></pre>
               Validation Suite</a> by OpenUH Research Compiler - passed 119
             tests of 123.</li>
         </ul>
-        <h2><a name="supported-platforms" class="anchor" href="#supported-platforms"><span
+        <h2><a name="supported-platforms" class="anchor" href="#supported-platforms"><span
+
               class="octicon octicon-link"></span></a>Supported platforms</h2>
         <p>OS: Linux or Mac OS X<br>
           Architecture: x86-64</p>
