--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ $ ./hello</code></pre>
           <li>Analysis of atomic constructs and loops should be reworked for
             better diagnostics and readability.</li>
         </ul>
+        Also, please note that this development is based on latest released clang (3.3), not what is
+        currently under development in clang trunk.
         <h1><a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
         <p><strong>LLVM</strong>, <strong>Clang</strong>, and <strong>Compiler-rt</strong>
           are distributed under LLVM's <a href="http://llvm.org/docs/DeveloperPolicy.html#license">the
