--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta content="Intel Corporation" name="author">
     <meta content="clang, LLVM, OpenMP" name="keywords">
   </head>
-  <body> <!-- HEADER -->
+  <body>
+    <!-- HEADER -->
     <div id="header_wrap" class="outer">
       <header class="inner"><a id="forkme_banner" href="https://github.com/clang-omp?tab=repositories">View
           on GitHub</a>
@@ -17,8 +18,7 @@
         <h2 id="project_tagline">An implementation of the OpenMP C/C++ language
           extensions in Clang/LLVM compiler </h2>
         <div id="downloads"> <a class="nav_link" href="#try-openmp-clang">Try
-            it!</a> <a class="nav_link" href="#contribute">Contribute</a> <a class="nav_link"
-
+            it!</a> <a class="nav_link" href="#contribute">Contribute</a> <a class="nav_link"
             href="#status">Status</a> <a class="nav_link" href="#license">License</a>
           <a class="nav_link" href="#contact">Contact</a> </div>
       </header>
@@ -32,29 +32,29 @@
           memory parallelism in Fortran and C/C++ programs.</p>
         <p>This project implements OpenMP support in the <a href="http://clang.llvm.org/">Clang</a>
           C language family front-end for the <a href="http://llvm.org/">LLVM</a>
-          compiler. The current scope of the project is to support the <a href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP
-            3.1</a> specification.</p>
+          compiler. The current scope of the project is to support the <a href="http://www.openmp.org/mp-documents/OpenMP4.0.0.pdf">OpenMP
+            4.0</a> specification.</p>
         <p>We plan eventually to contribute this implementation to the Clang
           trunk; initial patches have already been committed. In the meantime,
           you are welcome to try (and contribute to!) the full OpenMP 3.1
           implementation hosted here.</p>
         <h1><a name="news" class="anchor" href="#news"><span class="octicon octicon-link"></span></a>News</h1>
-        <p>August 23, 2013 - Initial release.</p>
-        <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
-
+        <p>August 23, 2013 - Initial release.<br>
+          September 27, 2013 - Added support of 'proc_bind' clause.<br>
+          November 25, 2013 - Added support of 'omp simd', 'omp declare
+          reduction' directives.</p>
+        <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
-        <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
-
+        <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
               class="octicon octicon-link"></span></a>Getting the source code</h2>
         <pre><code>$ git clone https://github.com/clang-omp/llvm
 $ git clone https://github.com/clang-omp/compiler-rt llvm/projects/compiler-rt
 $ git clone -b clang-omp https://github.com/clang-omp/clang llvm/tools/clang</code></pre>
         <p>The source code structure follows Clang/LLVM: <a href="http://llvm.org/docs/GettingStarted.html">http://llvm.org/docs/GettingStarted.html</a>.<br>
-          To run (rather than just compile) code you need to get and build an <a
-
+          To run (rather than just compile) code you need to get and build an <a
             href="http://www.openmprtl.org/">Intel&reg; OpenMP* Runtime Library</a>.</p>
         <h2><a name="building" class="anchor" href="#building"><span class="octicon octicon-link"></span></a>Building</h2>
-        <p>To build clang with OpenMP 3.1 support just follow the clang/LLVM
+        <p>To build clang with OpenMP support just follow the clang/LLVM
           compiler's standard build procedure (see <a href="http://clang.llvm.org/get_started.html">Getting
             Started: Building and Running Clang</a>).</p>
         <h2><a name="using" class="anchor" href="#using"><span class="octicon octicon-link"></span></a>Using</h2>
@@ -70,8 +70,7 @@ export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRA
           following options to enable OpenMP support and link to the runtime
           library.</p>
         <pre><code>-fopenmp</code></pre>
-        <h2><a name="a-simple-example" class="anchor" href="#a-simple-example"><span
-
+        <h2><a name="a-simple-example" class="anchor" href="#a-simple-example"><span
               class="octicon octicon-link"></span></a>A simple example</h2>
         <script src="https://gist.github.com/clang-omp/638a40f3a797315661d6.js"></script>
         <p>Confirm that the compiler is working correctly by saving the above
@@ -111,8 +110,7 @@ $ ./hello</code></pre>
               Validation Suite</a> by OpenUH Research Compiler - passed 119
             tests of 123.</li>
         </ul>
-        <h2><a name="supported-platforms" class="anchor" href="#supported-platforms"><span
-
+        <h2><a name="supported-platforms" class="anchor" href="#supported-platforms"><span
               class="octicon octicon-link"></span></a>Supported platforms</h2>
         <p>OS: Linux or Mac OS X<br>
           Architecture: x86-64</p>
