Fixed info according to last updates.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
           implementation hosted here.</p>
         <h1><a name="news" class="anchor" href="#news"><span class="octicon octicon-link"></span></a>News</h1>
         <p>August 23, 2013 - Initial release.<br>
-          September 27, 2013 - Added support of 'proc_bind' clause.<br>
-          November 25, 2013 - Added support of 'omp simd', 'omp declare
-          reduction' directives.</p>
+          September 27, 2013 - Added support of <code>proc_bind</code> clause.<br>
+          November 25, 2013 - Added support of <code>omp simd</code>, <code>omp
+            declare reduction</code> directives.<br>
+          December 6, 2013 - Added support of variable length array in OpenMP
+          constructs.</p>
         <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
         <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
@@ -117,8 +119,7 @@ $ ./hello</code></pre>
         <h2><a name="known-issues" class="anchor" href="#known-issues"><span class="octicon octicon-link"></span></a>Known
           issues</h2>
         <ul>
-          <li>Using variable-length arrays in an OpenMP region does not yet
-            work.</li>
+          None.
         </ul>
         <h2>Important Note</h2>
         <p>Please note that this is a preliminary version. While everything is
