--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           September 27, 2013 - Added support of <code>proc_bind</code> clause.<br>
           November 25, 2013 - Added support of <code>omp simd</code>, <code>omp
             declare reduction</code> directives.<br>
-          December 6, 2013 - Added support of variable length array in OpenMP
+          December 6, 2013 - Added support of variable length arrays in OpenMP
           constructs.</p>
         <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
