--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ $ ./hello</code></pre>
     <!-- FOOTER -->
     <div id="footer_wrap" class="outer">
       <div class="inner">
-        <p class="inline">&copy; 2013 Intel Corporation.</p>
+        <p class="inline">&copy; 2013-2014 Intel Corporation.</p>
         <ul class="footer_list">
           <li class="footer_li"><a href="http://software.intel.com/en-us/articles/optimization-notice">Optimization
               Notice</a></li>
@@ -177,10 +177,9 @@ $ ./hello</code></pre>
         <p>Intel is a trademark of Intel Corporation in the U.S. and/or other
           countries.</p>
         <p>Slate theme maintained by <a href="https://github.com/jsncostello">Jason
-            Costello</a></p>
-        <a href="http://www.hc-spartak.ru/spartak_dolzhen_zhit/"><img src="http://www.hc-spartak.ru/img/spartak_dolzhen_zhit.gif"
-
-            alt="?? ??????? ?????? ????!" height="90" width="728"></a> </div>
+            Costello</a><br>
+        </p>
+      </div>
       <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -191,6 +190,5 @@ $ ./hello</code></pre>
   ga('send', 'pageview');
 
     </script> </div>
-    
   </body>
 </html>
