--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@ $ ./hello</code></pre>
         <h1><a name="status" class="anchor" href="#status"><span class="octicon octicon-link"></span></a>Status</h1>
         <p>Full support for <a href="http://www.openmp.org/mp-documents/OpenMP3.1.pdf">OpenMP
             3.1</a> and most of <a href="http://www.openmp.org/mp-documents/OpenMP4.0.0.pdf">OpenMP
-            4.0</a> (except for offloading) are implemented. This implementation
-          relies on the Intel OpenMP API, and should be used along with
-          Intel&reg; OpenMP* Runtime Library that supports that API (available
-          from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>). </p>
+            4.0</a> features (except for offloading) are implemented. This
+          implementation relies on the Intel OpenMP API, and should be used
+          along with Intel&reg; OpenMP* Runtime Library that supports that API
+          (available from <a href="http://www.openmprtl.org/">www.openmprtl.org</a>).
+          </p>
         <p>The following openly available OpenMP test suites pass:</p>
         <ul>
           <li><a href="http://web.cs.uh.edu/%7Eopenuh/download/">OpenMP
