Updated info on new supported constructs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           constructs.<br>
           February 6, 2014 - Upgrade to clang/llvm 3.4.<br>
           March 14, 2014 - Added support of <code>depend</code> clause in <code>omp
-            task</code>directive.</p>
+            task</code>directive, support for <code>omp parallel for simd</code>
+          directive.</p>
         <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
         <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
