--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           February 6, 2014 - Upgrade to clang/llvm 3.4.<br>
           March 14, 2014 - Added support of <code>depend</code> clause in <code>omp
             task</code>directive, support for <code>omp parallel for simd</code>
-          directive.</p>
+          directive.<br>
+          April 11, 2014 - Added support of <code>omp cancel</code> and <code>omp
+            cancellation point</code>directives.</p>
         <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
         <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
