Order of key dates

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
           you are welcome to try (and contribute to!) the OpenMP 4.0
           implementation hosted here.</p>
         <h1><a name="news" class="anchor" href="#news"><span class="octicon octicon-link"></span></a>News</h1>
-        <p>August 23, 2013 - Initial release.<br>
-          September 27, 2013 - Added support of <code>proc_bind</code> clause.<br>
-          November 25, 2013 - Added support of <code>omp simd</code>, <code>omp
-            declare reduction</code> directives.<br>
-          December 6, 2013 - Added support of variable length arrays in OpenMP
-          constructs.<br>
-          February 6, 2014 - Upgrade to clang/llvm 3.4.<br>
+        <p>April 11, 2014 - Added support of <code>omp cancel</code> and <code>omp
+            cancellation point</code>directives.<br>
           March 14, 2014 - Added support of <code>depend</code> clause in <code>omp
             task</code>directive, support for <code>omp parallel for simd</code>
           directive.<br>
-          April 11, 2014 - Added support of <code>omp cancel</code> and <code>omp
-            cancellation point</code>directives.</p>
+          February 6, 2014 - Upgrade to clang/llvm 3.4.<br>
+          December 6, 2013 - Added support of variable length arrays in OpenMP
+          constructs.<br>
+          November 25, 2013 - Added support of <code>omp simd</code>, <code>omp
+            declare reduction</code> directives.<br>
+          September 27, 2013 - Added support of <code>proc_bind</code> clause.<br>
+          August 23, 2013 - Initial release.</p>
         <h1><a name="try-openmp-clang" class="anchor" href="#try-openmp-clang"><span
               class="octicon octicon-link"></span></a>Try OpenMP/Clang</h1>
         <h2><a name="getting-the-source-code" class="anchor" href="#getting-the-source-code"><span
