Updated info on supported constructs

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
           you are welcome to try (and contribute to!) the OpenMP 4.0
           implementation hosted here.</p>
         <h1><a name="news" class="anchor" href="#news"><span class="octicon octicon-link"></span></a>News</h1>
-        <p>June 9, 2014 - Initial support of <code>omp target data</code> and <code>omp
-            target update</code>directives (just parsing and semantic analysis).<br>
+        <p>June 9, 2014 - Initial support of <code>omp target data</code>,<code>omp
+            target update</code>and <code>omp target teams</code> directives
+          (just parsing and semantic analysis).<br>
           May 6, 2014 - Initial support of <code>omp target, teams, distribute,
             distribute simd, distribute for, distribute parallel for, distribute
             parallel for simd</code> and <code>omp declare target</code>directives
