--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ $ ./hello</code></pre>
         clang (3.5), not what is currently under development in clang trunk.
         
         <h1><a name="external_projects" class="anchor" href="#external_projects"><span class="octicon octicon-link"></span></a>External Projects</h1>
-        External projects based on OpenMP implementation hosted here.
+        External projects based on OpenMP implementation hosted here. If you want your project to be listed, please <a href="https://github.com/clang-omp/clang/issues">let us know</a>.
         <p>
         <ul>
         <li><a href="https://github.com/omp-check/llvm-clang/tree/hash_test">Experimental "check" clause for "parallel for" pragma</a>
