Fixed integration with XCode

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@ export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRA
               <li>Add <code>-fopenmp</code> to <em>Other C Flags</em></li>
               <li>Add <code>/usr/local/include</code> to <em>Header Search
                   Paths</em></li>
+              <li style="box-sizing: border-box;">Set<span class="Apple-converted-space">&nbsp;</span><em
+                  style="box-sizing: border-box;">Enable Modules (C and
+                  Objective-C)</em><span class="Apple-converted-space">&nbsp;</span>to<span
+                  class="Apple-converted-space"> </span><span style="color: #222222;"><span
+                    style="font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;"><code>No</code>.</span></span></li>
             </ul>
           </li>
           <li>Under <em>Build Phases</em>
