--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <H2>Development activity of OpenMP support in clang/llvm compiler moved to <a href=http://www.llvm.org>www.llvm.org</a>.
+        <H2>Development activity of OpenMP support in clang/llvm compiler has moved to <a href=http://www.llvm.org>www.llvm.org</a>.
         Please get OpenMP-enabled clang (OpenMP 3.1 is fully supported in clang/llvm 3.7) and contribute to its further development there. This web-site is maintained for archival purposes only.</H2>
         <p>The OpenMP (<u>O</u>pen <u>M</u>ulti-<u>P</u>rocessing)
           specification is a standard for a set of compiler directives, library
