Fixed broken link due to renamed profile

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ export LD_LIBRARY_PATH=/install/prefix/lib:&lt;OpenMP library path&gt;:$LD_LIBRA
         <h2><a name="using" class="anchor" href="file:///C:/Users/abataev/Documents/GitHub/clang-omp.github.io/index.html#using"><span
 
               class="octicon octicon-link"></span></a>Using clang-omp with Xcode</h2>
-        Instructions are provided by <a href="https://github.com/totalvoidness">Sebastian Stenzel</a>.
+        Instructions are provided by <a href="https://github.com/overheadhunter">Sebastian Stenzel</a>.
         <p>
         <ol>
           <li>Install clang-omp using <a href="http://brew.sh/">homebrew</a>: <code>brew
